--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Four Colored Boxes</title>
 </head>
 <body>
-    hello world!
+  
+  <!-- Your site’s header! -->
+	<!-- The <header> element is basically a <div> but with an easier to understand name -->
+	<!-- Every website should have exactly 1 <h1> (heading 1) element, which is your page’s title -->
+	<header class="header">
+    <div class="my-element">asdfasdf</div>
+		<h1 class="header-title">lock n key type</h1>
+		<p class="header-desc">
+   bello! welcome to lock n key, a type foundry developed over a entire semester! these fonts spanning from inspiration from the aesthetics of wrought iron fencing, the pixie hallow game, and the stretching of letters. 
+  
+   <div class="grid">
+    <div class="box box1">IRON WISP</div>
+    <div class="box box2">dream pixie</div>
+    <div class="box box3">silk span</div>
+  </div>
+  <footer class="footer">
+		A Type Foundry Designed by Kayla Randolph for Type as Code, Fall 2025
+	</footer>
 </body>
 </html>
